<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"> 
    
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back">

<TextView
android:id="@+id/widget1"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:layout_gravity="center_vertical|right"
android:text="@string/b"
/>


<TextView
android:id="@+id/widget16"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:text="@string/b1"
/>

<TextView
android:id="@+id/widget2"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:layout_gravity="center_vertical|right"
android:text="@string/b2"
/>
<TextView
android:id="@+id/widget3"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:text="@string/b3"
/>
<TextView
android:id="@+id/widget4"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:layout_gravity="center_vertical|right"
android:text="@string/b4"
/>
<TextView
android:id="@+id/widget5"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:text="@string/b5"
/>
<TextView
android:id="@+id/widget6"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:layout_gravity="center_vertical|right"
android:text="@string/b6"
/>
<TextView
android:id="@+id/widget7"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:text="@string/b7"
/>
<TextView
android:id="@+id/widget8"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:layout_gravity="center_vertical|right"
android:text="@string/b8"
/>
<TextView
android:id="@+id/widget9"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="#000000"
android:layout_gravity="center_vertical|right"
android:text="@string/b9"
/>



</LinearLayout>
 </ScrollView> 
